--- a/大型分布式实战第二课作业.md
+++ b/大型分布式实战第二课作业.md
@@ -40,6 +40,18 @@
 
 ### 答案：
 
+##### 实现原理：
+
+NAT（Network Address Translation）是在IPv4地址日渐枯竭的情况下出现的一种技术，在RFC3022中定义，可将整个组织的内部IP都映射到一个合法IP上来进行Internet的访问，也可将外部对某IP的访问映射到内部的服务器上。
+
+NAT分为源NAT和目的NAT两种，源NAT是指转换前源IP地址和转换后源IP地址不同，数据进入防火墙后，防火墙将其源地址进行了转换后再将其发出，使外部看不到数据包原来的源地址，对于TCP/UDP协议的数据包，防火墙不仅修改地址，还通过修改源端口来区分不同内部地址的连接，因此NAT环境下一个合法IP最多可以有65535条TCP连接；目的NAT是指转换前目的IP地址和转换后目的IP地址不同（对于TCP/UDP协议，也可以改变端口号），数据进入防火墙后，防火墙将其目的地址进行了转换后再将其发出，使看不到数据包原来的目的地址。
+
+##### 大致做法：
+
+在进行NAT时，如果是一个地址到一个地址的转换，称为一对一模式；如果是一个网段地址到一个地址的转换，称为多对一的转换；如果是一个网段地址到一个网段地址的转换，称为多对多的转换。上面说的IP伪装就属于源NAT，而端口映射和透明代理等属于目的NAT。
+
+NAT从另一个角度也可分为静态和动态两种，静态方式是明确指定了转换前后的地址和端口的情况，可以有一对一、一对多、多对一等方式，如果实际地址发生变化，NAT规则必须相应改变；而动态方式也就是IP伪装方式，是一种多到一的源NAT转换模式，一般只需指定转换前的地址，转换后地址则是防火墙的IP地址，此地址是可以动态改变的，而NAT规则可以不变。静态NAT一般用在防火墙IP地址都是固定的情况，而动态NAT用于防火墙IP地址不固定的场合，如ADSL拨号。动态情况下也可以进行目的NAT，但NAT规则是在获取了地址后才起作用。
+
 
 
 ## 第四题：
